k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bravocredit-worker
  labels:
    app: bravocredit-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bravocredit-worker
  template:
    metadata:
      labels:
        app: bravocredit-worker
    spec:
      containers:
        - name: bravocredit-worker
          image: bravocredit-app:latest
          imagePullPolicy: IfNotPresent
          command: ["bin/bravo_credit", "start"]
