k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bravocredit-postgres
  labels:
    app: bravocredit-postgres
spec:
  type: ClusterIP
  selector:
    app: bravocredit-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
