k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bravocredit-service
  labels:
    app: bravocredit
spec:
  type: ClusterIP
  selector:
    app: bravocredit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
