k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bravocredit-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  rules:
    - host: bravocredit.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bravocredit-service
                port:
                  number: 80
